Fixing some issues
- Scrollbar jumping
- Adding options to set up closet slide height

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -3,18 +3,18 @@
     padding: 0;
 }
 
+html, body{
+    width: 100%;
+    height: 100%;
+}
+
 #vaccordion {
     list-style: none;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-#vaccordion li {
-    
-}
-
-#vaccordion li.open {
-    
-}
 
 li:nth-child(1) {
     background-color: darkolivegreen;
